[EOP-14] docs: retract the forced-seam claim and draw the three new sequences
The @architecture-guardian gate rejected fcb6fd5 and it was right on every
count. The central claim of ADR-025 was false: starting and dealing CAN be
made one atomic act, by demarcating a transaction in the outer ring where a
composer joins recordStarted and recordDeal through REQUIRED propagation,
with no Spring import anywhere near the use-case layer. The seam is chosen,
not forced.

So the decision stands but its justification is rewritten. The honest reason
to keep two calls is that StartSessionUseCase announces GAME_STARTED over
in-process SSE, and no transaction can roll back a delivered frame: a deal
that failed after that announcement would leave every subscriber told a game
had started that was never dealt. The status transition must be written
before the deal, not committed, because a caller inside a transaction reads
its own writes.

That false claim was also live in production javadoc at DealHandsUseCase:18,
which the gate had no authority to reach. It is corrected here too.

Documentation, all from the gate's own findings:

- runtime-view.md owed this slice three sequence diagrams and said so at
  line 16. Dealing, playing and resolving are now drawn, with the play
  diagram showing the candidate built before openTrick commits, which is
  what fcb6fd5 fixed, and a note pinning ResolveTrickUseCase:134 as the one
  line slice E replaces.
- C4-Diagrams.md gained the three use cases, the DeckShuffler port and its
  implementation, the card-catalogue branch the deal makes load-bearing, and
  an edge from each use case to ResolvePlayerUseCase, because a component
  view that omits the authorisation seam hides this slice's main security
  property. Six false prose claims corrected, including a port count and a
  flag inventory that both said one where the code says two.
- ADR-025 gained the outer-ring composer as a rejected alternative, a
  decision recording that these three use cas